vpc.tf
provider "aws" {
  region     = "us-east-1"
}

resource "aws_vpc" "my_vpc_examen" {
  cidr_block = "172.16.0.0/16"
}

resource "aws_subnet" "public_subnet_examen" {
  vpc_id     = aws_vpc.my_vpc_examen.id
  cidr_block = "172.16.0.0/24"
}

resource "aws_subnet" "private_subnet_examen" {
  vpc_id     = aws_vpc.my_vpc_examen.id
  cidr_block = "172.16.1.0/24"
}

resource "aws_internet_gateway" "my_igw_examen" {
  vpc_id = aws_vpc.my_vpc_examen.id
}

resource "aws_route_table" "public_route_table_examen" {
  vpc_id = aws_vpc.my_vpc_examen.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.my_igw_examen.id
  }
}

resource "aws_route_table_association" "public_subnet_association" {
  subnet_id      = aws_subnet.public_subnet_examen.id
  route_table_id = aws_route_table.public_route_table_examen.id
}

resource "aws_nat_gateway" "my_nat_gateway" {
  allocation_id = aws_eip.nat_eip.id
  subnet_id     = aws_subnet.public_subnet_examen.id
}

resource "aws_eip" "nat_eip" {}

resource "aws_route_table" "private_route_table" {
  vpc_id = aws_vpc.my_vpc_examen.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_nat_gateway.my_nat_gateway.id
  }
}

resource "aws_route_table_association" "private_subnet_association" {
  subnet_id      = aws_subnet.private_subnet_examen.id
  route_table_id = aws_route_table.private_route_table_.id
}
